Fix #107186: Curve assets don't generate preview images

e7bea3fb6ed0 disabled this.

I do believe excluding `OB_CURVES_LEGACY` is wrong though. While it
_might_ not have real geometry, it certainly _can_ have real geometry,
so now legacy curves are enabled again in `OB_TYPE_IS_GEOMETRY`.

A more elaborate check for real geo on legacy curves could be set up in
a following commit.

Since `OB_TYPE_IS_GEOMETRY` is also used in depsgraph driver handling,
will seek additional review from more devs.